--- a/12-countdown-timer/index.html
+++ b/12-countdown-timer/index.html
@@ -24,7 +24,7 @@
           <!-- days -->
           <div class="deadline-format">
             <div>
-              <h4 class="days">34</h4>
+              <h4 class="days"></h4>
               <span>days</span>
             </div>
             <!-- end of item -->
@@ -32,7 +32,7 @@
           <!-- hours -->
           <div class="deadline-format">
             <div>
-              <h4 class="hours">34</h4>
+              <h4 class="hours"></h4>
               <span>hours</span>
             </div>
             <!-- end of item -->
@@ -40,7 +40,7 @@
           <!-- minutes -->
           <div class="deadline-format">
             <div>
-              <h4 class="mins">34</h4>
+              <h4 class="mins"></h4>
               <span>mins</span>
             </div>
             <!-- end of item -->
@@ -48,7 +48,7 @@
           <!-- seconds -->
           <div class="deadline-format">
             <div>
-              <h4 class="secs">34</h4>
+              <h4 class="secs"></h4>
               <span>secs</span>
             </div>
             <!-- end of item -->
